--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,14 +1,16 @@
-.Header{
- background-color: #fff;
- height: 70px;
- line-height: 70px;
- display: flex;
- align-items: center;
- justify-content: space-between;
- border-bottom: 1px solid #e8e8e8;
+/* stylelint-disable font-family-no-missing-generic-family-keyword */
+
+.Header {
+  background-color: #fff;
+  height: 70px;
+  line-height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #e8e8e8;
 }
 
-.Header_title{
+.Header_title {
   font-family: Montserrat;
   font-size: 20px;
   font-weight: bold;
@@ -20,7 +22,7 @@
   margin-right: 20px;
 }
 
-.Header_avatar{
+.Header_avatar {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -28,3 +30,5 @@
   padding: 0.875rem;
   border: solid 1px #e8e8e8;
 }
+
+/* stylelint-enable */
