--- a/src/components/Books.css
+++ b/src/components/Books.css
@@ -1,14 +1,12 @@
 .Books_form {
   max-width: 700px;
   margin: 0 auto;
-  
 }
 
 .Books_form-input {
   display: flex;
   justify-content: space-between;
   margin-top: 15px;
-
 }
 
 .Books_input {
@@ -24,7 +22,7 @@
 
 .Books_btn {
   padding: 0 10px;
-  font-size: .8rem;
+  font-size: 0.8rem;
   background-color: #4386bf;
   color: #fff;
   border: none;
