--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,12 +2,11 @@
 
 .Header {
   display: flex;
-  justify-content: left;
-  /* align-content: flex-start; */
+
+  /* justify-content: left; */
   background-color: #fff;
   height: 70px;
   line-height: 70px;
-  display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #e8e8e8;
